--- a/my-app/src/styles/LandingPage.css
+++ b/my-app/src/styles/LandingPage.css
@@ -6,5 +6,65 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
+.user-account-cont{
+  height: 70vh;
+  width: 40vw;
+  background-color: white;
+  border-radius: 20px;
+  overflow: hidden;
+  
+}
+.select-user{
+  height: 80px;
+  background-color: #ECF2FF;
+  display: grid;
+  place-items: center;
+  font-size: large;
+  font-weight: 700;
+ 
+}
+.user-accounts-container {
+    height: 50vh;
+    overflow-y: scroll;
+    width: 100%;
+    padding: 0 30px;
+  }
+  
+  .user-card {
+    display: flex;
+    align-items: center;
+    margin: 5px;
+    padding: 5px;
+    font-size: small;
+    box-shadow: 0px 1px 0px 0px #E1EEDD;
+  }
+  .user-card:hover{
+    cursor: pointer;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #f5f5f5;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 5px;
+  }
+  
+  
+  .user-card img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    margin-right: 10px;
+  }
