--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -10,5 +10,18 @@
 font-family: 'Nunito Sans', sans-serif;
 font-family: 'Raleway', sans-serif;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 5px;
+}
+
 
 
