--- a/my-app/src/styles/LandingPage.css
+++ b/my-app/src/styles/LandingPage.css
@@ -34,6 +34,12 @@
     width: 100%;
     padding: 0 30px;
   }
+  .LoadingIcon{
+    display: grid;
+    place-items: center;
+    height: 100%;
+    width: 100%;
+  }
   
   .user-card {
     display: flex;
@@ -42,9 +48,11 @@
     padding: 5px;
     font-size: small;
     box-shadow: 0px 1px 0px 0px #E1EEDD;
+    border-radius: 8px;
   }
   .user-card:hover{
     cursor: pointer;
+    background-color: #F5EBEB;
   }
   
   .user-card img {
